unpackaged/main/default/objects/GroupeDerogation__c/GroupeDerogation__c.object-meta.xml
<CustomObject>
    <description>Utilisé pour stocker le référentiel des groupes de dérogation du groupe Petit Forestier afin d&#39;envoyer les informations le moment voulu, à SAP CPQ</description>
    <label>Groupe de dérogation</label>
    <nameField>
        <label>Nom du Groupe de dérogation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Groupes de dérogation</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>