unpackaged/main/default/objects/GroupeDerogation__c/fields/ID_du_service_Juridique__c.field-meta.xml
<CustomField>
    <fullName>ID_du_service_Juridique__c</fullName>
    <label>ID du service Juridique</label>
    <length>30</length>
    <type>Text</type>
</CustomField>