unpackaged/main/default/objects/GroupeDerogation__c/fields/N1Approbateur1__c.field-meta.xml
<CustomField>
    <fullName>N1Approbateur1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>N1 Approbateur 1</label>
    <referenceTo>User</referenceTo>
    <relationshipName>GroupesDerogationN1A1</relationshipName>
    <type>Lookup</type>
</CustomField>