unpackaged/main/default/objects/GroupeDerogation__c/fields/N1Approbateur2__c.field-meta.xml
<CustomField>
    <fullName>N1Approbateur2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>N1 Approbateur 2</label>
    <referenceTo>User</referenceTo>
    <relationshipName>GroupesDerogationN1A2</relationshipName>
    <type>Lookup</type>
</CustomField>