unpackaged/main/default/objects/GroupeDerogation__c/fields/N1Approbateur3__c.field-meta.xml
<CustomField>
    <fullName>N1Approbateur3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>N1 Approbateur 3</label>
    <referenceTo>User</referenceTo>
    <relationshipName>GroupesDerogationN1A3</relationshipName>
    <type>Lookup</type>
</CustomField>