unpackaged/main/default/objects/GroupeDerogation__c/fields/N1Approvers__c.field-meta.xml
<CustomField>
    <fullName>N1Approvers__c</fullName>
    <formula>N1Approbateur1__r.Email &amp; &#39;|&#39;&amp;  N1Approbateur2__r.Email &amp; &#39;|&#39;&amp;  N1Approbateur3__r.Email &amp; &#39;|&#39;&amp;  N1Approbateur4__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approbateurs N1</label>
    <type>Text</type>
</CustomField>