unpackaged/main/default/objects/GroupeDerogation__c/fields/N2Approvers__c.field-meta.xml
<CustomField>
    <fullName>N2Approvers__c</fullName>
    <formula>N2Approbateur1__r.Email &amp; &#39;|&#39; &amp; N2Approbateur2__r.Email &amp; &#39;|&#39; &amp; N2Approbateur3__r.Email &amp; &#39;|&#39; &amp; N2Approbateur4__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approbateurs N2</label>
    <type>Text</type>
</CustomField>