unpackaged/main/default/objects/GroupeDerogation__c/fields/N3Approvers__c.field-meta.xml
<CustomField>
    <fullName>N3Approvers__c</fullName>
    <formula>N3Approbateur1__r.Email &amp;&#39;|&#39;&amp; N3Approbateur2__r.Email &amp; &#39;|&#39; &amp; N3Approbateur3__r.Email &amp; &#39;|&#39; &amp; N3Approbateur4__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approbateurs N3</label>
    <type>Text</type>
</CustomField>