unpackaged/main/default/objects/GroupeDerogation__c/fields/TypeDerogation__c.field-meta.xml
<CustomField>
    <fullName>TypeDerogation__c</fullName>
    <label>Type de dérogation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Diffus</fullName>
            </value>
            <value>
                <fullName>Grand Compte</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>