unpackaged/main/default/objects/GroupeDerogation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TypeDerogation__c</columns>
    <columns>SalesArea__c</columns>
    <columns>N1Approbateur1__c</columns>
    <columns>N1Approbateur2__c</columns>
    <columns>N1Approbateur3__c</columns>
    <columns>N2Approbateur1__c</columns>
    <columns>N2Approbateur2__c</columns>
    <columns>N2Approbateur3__c</columns>
    <columns>N3Approbateur1__c</columns>
    <columns>N3Approbateur2__c</columns>
    <columns>N3Approbateur3__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>